# rust-frontend

./: .gitignore  ARCHITECTURE.md  BUILD_STATUS.md  Cargo.toml  FINAL_LAYOUT.md  Makefile  README.md  STRUCTURE.md  STYLE_GUIDE.md  TAURI_MIGRATION_GUIDE.md  TAURI_QUICKSTART.md  USAGE_GUIDE.md  ascii-art.txt  config.toml  install-linux.sh  install-mac.sh  install-man-page.sh  package-lock.json  personas.json  structure-before-reorg.txt  test-setup.sh  test_update_integration  uninstall-linux.sh  uninstall-mac.sh  update-completions.sh
.github/workflows/: release.yml
.kiro/specs/chat-enhancements/: design.md  requirements.md  tasks.md
.kiro/specs/model-selector/: design.md  requirements.md  tasks.md
.kiro/specs/modern-chat-features/: design.md  requirements.md  tasks.md
.kiro/specs/settings-menu/: design.md  requirements.md  tasks.md
.kiro/specs/ui-theming-enhancements/: design.md  requirements.md  tasks.md
archived-iced-gui/: Cargo.toml  README-ICED-GUI.md  README.md
archived-iced-gui/src/: app.rs  backend.rs  config.rs  icons.rs  lib.rs  main.rs
archived-iced-gui/src/search/: index.rs
docs/: .summary.txt  ARCHITECTURE.md  BUILD_STATUS.md  CHANGELOG.md  FEATURES.md  FILES.md  FLOW_DIAGRAMS.md  HOW_IT_WORKS.md  LAYOUT_UPDATE.md  MODULE_GUIDE.md  OLLAMA_STYLE.md  QUICK_REFERENCE.md  README.md  STYLE_CHANGELOG.md  STYLE_GUIDE.md  SUMMARY.md  USAGE_GUIDE.md  VISUAL_REFERENCE.md  prometheus-cli.1
prometheus-cli/: Cargo.toml
prometheus-cli/src/: app.rs  backend.rs  commands.rs  config.rs  conversation.rs  error.rs  exit_codes.rs  input.rs  lib.rs  main.rs  markdown_renderer.rs  mode.rs  non_interactive.rs  ollama_service.rs  output.rs  streaming.rs  terminal.rs  update.rs  url_validator.rs
prometheus-cli/tests/: https_enforcement_integration_tests.rs
prometheus-js/: .gitignore  QUICKSTART.md  README.md  package.json
prometheus-js/src/: api.js  config.js  conversation.js  index.js  markdown.js
scripts/: create-release.sh  prometheus-cli.rb
scripts/installers/: linux-installer-template.sh  macos-installer-template.sh  windows-installer-template.nsi
src/: app.rs  backend.rs  config.rs  conversation.rs  icons.rs  main.rs  markdown.rs
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/proptest-regressions/: persona.txt
src-tauri/src/: commands.rs  config.rs  lib.rs  persona.rs
src-tauri/src/network/: IMPLEMENTATION_SUMMARY.md  USAGE.md  connection.rs  logging.rs  mod.rs  retry.rs
src-tauri/src/search/: mod.rs
src-tauri/tests/: TASK_14_VERIFICATION.md  TASK_7_VERIFICATION.md  TASK_8_VERIFICATION.md  config_test.rs  connection_mode_commands_test.rs  endpoint_commands_test.rs  initialization_test.rs  manual_ollama_test.md  system_prompt_integration.rs
src/cli/: app.rs  commands.rs  main.rs  markdown_renderer.rs  mod.rs  streaming.rs  terminal.rs
src/search/: index.rs  mod.rs  query.rs
tests/: cli_integration_tests.rs
ui/: app.js  debug.html  index.html  package-lock.json  package.json  styles.css  test-endpoint-dialog.html  test-mobile-responsive.html  test-persona-integration.html  test-sidebar.html  vitest.config.js
ui/test/: MANUAL_SETTINGS_TEST.md  README.md  TASK_11_VERIFICATION.md  TASK_12_VERIFICATION.md  TASK_13_IMPLEMENTATION_SUMMARY.md  TASK_13_VERIFICATION.md  active-conversation-highlighting.test.js  animation-timing.test.js  circular-button.test.js  click-outside.test.js  conversation-selection.test.js  empty-input-disables.test.js  error-handling-feedback.test.js  fixed-positioning.test.js  hamburger-icon.test.js  infrastructure.test.js  input-container.test.js  input-focus.test.js  keyboard-navigation.test.js  layout-constraints.test.js  loading-state-disables.test.js  mobile-positioning.test.js  persona-bubble-container-unit.test.js  persona-bubble-rendering.test.js  persona-bubble-unit.test.js  persona-integration.test.js  persona-toggle.test.js  responsive-behavior.test.js  send-button-hover.test.js  settings-ui.test.js  setup.js  sidebar-content.test.js  sidebar-toggle.test.js  single-active-persona.test.js  utils.js  visual-feedback-consistency.test.js
