[package]
name = "rust-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
config = "0.14"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
serde_json = "1.0"

