[package]
name = "prometheus"
version = "0.2.0"
edition = "2021"

[lib]
name = "prometheus"
path = "src/lib.rs"

[[bin]]
name = "prometheus"
path = "src/main.rs"

[[bin]]
name = "prometheus-cli"
path = "src/cli/main.rs"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
config = "0.14"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
serde_json = "1.0"
arboard = "3.4"
toml = "0.8"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }
syntect = "5.1"
regex = "1.10"
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
termimad = "0.28"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
mockito = "1.2"

