[workspace]
members = [
    "prometheus-cli",
    "src-tauri",
    "archived-iced-gui",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies for version consistency across workspace members
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
config = "0.14"
anyhow = "1.0"
log = "0.4"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
url = "2.4"

# CLI-specific dependencies
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
termimad = "0.28"

# Iced GUI-specific dependencies
iced = { version = "0.12", features = ["tokio"] }
arboard = "3.4"
syntect = "5.1"
toml = "0.8"
once_cell = "1.19"
env_logger = "0.11"

# System dependencies
libc = "0.2"
ctrlc = "3.4"

# Dev dependencies
quickcheck = "1.0"
quickcheck_macros = "1.0"
mockito = "1.2"
tempfile = "3.8"
