[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
futures-util = "0.3"
aes-gcm = "0.10"
keyring = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
config = "0.13"
toml = "0.8"
anyhow = "1.0"

[dev-dependencies]
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
config = "0.13"
toml = "0.8"
